common-applications/test-environment/openeuler-meetingserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: meetingserver-ingress
  namespace: openeuler-meetingserver
spec:
  rules:
  - host: meetingserver-openeuler.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: meeting-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - meetingserver-openeuler.test.osinfra.cn
    secretName: meetingserver-tls
